turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
If you intended to match against value left in class Turmite, you must use backticks, like: case `left` =>
    case left => gauche(); avance()
         ^Turmite:20: warning: unreachable code due to variable pattern 'left' on line 37
If you intended to match against value pdv in class Turmite, you must use backticks, like: case `pdv` =>
    case pdv => avance()
                      ^Turmite:21: warning: unreachable code due to variable pattern 'left' on line 37
If you intended to match against value dt in class Turmite, you must use backticks, like: case `dt` =>
    case dt => droite();droite()
            ^Turmite:22: warning: unreachable code due to variable pattern 'left' on line 37
If you intended to match against value right in class Turmite, you must use backticks, like: case `right` =>
    case right => droite()
               ^Turmite:20: warning: unreachable code
    case pdv => avance()
                      ^Turmite:20: warning: unreachable code
    case pdv => avance()
                      ^Turmite:4: error: overriding method left in class AbstractBuggle of type ()Unit;
 value left needs `override' modifier
val left = 2
    ^Turmite:8: error: overriding method right in class AbstractBuggle of type ()Unit;
 value right needs `override' modifier
val right = 8
    ^