turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0
val left = 2
val stop = 0
val pdv = 1
val dt = 4
val right = 8

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var col = 0
  for(i <- 0 to colors.length-1){
  	if(getCouleurSol() == colors(i)){
      col = i
    	}
  	}
  setCouleurBrosse(colors(rule(state)(col)(0)))
  rule(state)(col)(1) match{
    case left => gauche(); avance()
    case pdv => avance()
    case dt => droite();droite()
    case right => droite()
    avance()
  }
  state = rule(state)(col)(2)
}